@startuml

title __SERVICE's Class Diagram__\n

  namespace ub.edu.resources.service {
    interface ub.edu.resources.service.AbstractFactoryData {
        {abstract} + createDAOClient()
        {abstract} + createDAOEpisodi()
        {abstract} + createDAOFavorits()
        {abstract} + createDAOSerie()
        {abstract} + createDAOTemporada()
        {abstract} + createDAOUsuari()
        {abstract} + createDAOValoracions()
        {abstract} + createDAOVisualitzacio()
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.DataService {
        + DataService()
        + addClient()
        + addSerieMylist()
        + addUsuari()
        + addValoracioEstrella()
        + addValoracioThumb()
        + addVisualitzacio()
        + getAllClients()
        + getAllEpisodis()
        + getAllFavorits()
        + getAllSeries()
        + getAllTemporades()
        + getAllUsuaris()
        + getAllValoracions()
        + getAllVisualitzacions()
        + getClientByUsuariAndPassword()
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.FactoryMOCK {
        + createDAOClient()
        + createDAOEpisodi()
        + createDAOFavorits()
        + createDAOSerie()
        + createDAOTemporada()
        + createDAOUsuari()
        + createDAOValoracions()
        + createDAOVisualitzacio()
    }
  }
  

  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOClient : clientDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOEpisodi : episodiDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOFavorits : favoritsDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOSerie : serieDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOTemporada : temporadaDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOUsuari : usuariDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOValoracions : valoracionsDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOVisualitzacio : visualitzacioDAO
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
